fix double scrollbar

--- a/app/index-style.css
+++ b/app/index-style.css
@@ -39,7 +39,7 @@ body {
   -moz-user-select:none !important;
   -ms-user-select:none !important;
   user-select:none !important;
-  overflow-y:scroll !important;
+  /* overflow-y:scroll !important; */
 }
 
 input[type=text] {
